bin_PROGRAMS = tomb-kdf-pbkdf2 tomb-kdf-pbkdf2-gensalt tomb-kdf-pbkdf2-getiter tomb-utils-hexencode
tomb_kdf_pbkdf2_SOURCES = pbkdf2/pbkdf2.c
tomb_kdf_pbkdf2_LDADD = @CRYPTO_LIBS@

tomb_kdf_pbkdf2_gensalt_SOURCES = pbkdf2/gen_salt.c

tomb_kdf_pbkdf2_getiter_SOURCES = pbkdf2/benchmark.c
tomb_kdf_pbkdf2_getiter_LDADD = @CRYPTO_LIBS@

tomb_utils_hexencode_SOURCES = hexencode.c

